--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -62,11 +62,11 @@ main{
 display: flex;
 }
 
-app-sidebar{
+.sidebar{
 width: 20%;
 }
 
-app-main-display{
+.main-display{
 width: 75%;
 padding: 15px;
 }
@@ -74,3 +74,27 @@ padding: 15px;
 .btnn{
   cursor: pointer;
 }
+
+/*.active {*/
+  /*color: #fff;*/
+  /*background-color: #f6bb42;*/
+/*}*/
+
+/*.pagination-panel{*/
+  /*text-align: center;*/
+  /*margin: 10px;*/
+/*}*/
+
+/*.pagination-btn{*/
+  /*padding: 7px;*/
+  /*display: inline-block;*/
+  /*cursor: pointer;*/
+  /*border: solid lightgrey 1px;*/
+  /*width: 20px;*/
+  /*text-decoration: none;*/
+/*}*/
+
+/*.pagination-btn:hover{*/
+  /*background-color: gainsboro;*/
+  /*color: orange;*/
+/*}*/
