--- a/src/app/main-display/main-display.component.css
+++ b/src/app/main-display/main-display.component.css
@@ -1,7 +1,7 @@
 .flat-card{
   width: 95%;
   display: flex;
-  height: 210px;
+  height: 200px;
   margin-bottom: 15px;
   box-shadow: 1px 5px 2px -2px lightgrey;
   cursor: pointer;
@@ -93,4 +93,27 @@
 .home-valuation{
   color: #0073d9;
   font-size: .9em;
+}
+
+.active {
+  color:red;
+  background-color: #ace4c8;
+}
+
+.pagination-panel{
+  text-align: center;
+  magrin: 10px;
+}
+
+.pagination-btn{
+  padding: 7px;
+  display: inline-block;
+  cursor: pointer;
+  border: solid lightgrey 1px;
+  width: 20px;
+}
+
+.pagination-btn:hover{
+  background-color: gainsboro;
+  color: orange;
 }
