--- a/src/app/main-display/main-display.component.html
+++ b/src/app/main-display/main-display.component.html
@@ -1,88 +1,72 @@
-<section *ngIf="trueResponse">
+<section *ngIf="trueResponse; else not_found">  <!--then loading -->
 
-  <div  class="flat-card" *ngFor="let item of itemsFlat">
+  <div *ngIf="loadingVar; else loading">
 
-    <div class="flat-card-img">
-      <img class="flat-card-img-img" src="{{item.img_url}}" alt="{{item.title}}" title="{{item.title}}">
-    </div>
+    <pagination-app> </pagination-app>
 
-    <div class="flat-card-description">
-      <div class="description-title">
-        {{item.title}}
-      </div>
+    <flats-list-app> </flats-list-app>
 
-      <div class="description-keywords">
-        {{item.keywords}}
-      </div>
-
-      <div class="description-descr">
-        {{item.summary}}
-      </div>
-
-      <div class="description-seen">
-        <span class="description-seen--active"> {{item.updated_in_days_formatted}} </span>
-        <span> on </span>
-        <span>  {{item.datasource_name | uppercase}} </span>
-      </div>
-    </div>
-
-    <div class="flat-card-price-column">
-      <div class="price-string">
-        {{item.price_formatted}}
-      </div>
-
-      <div class="home-valuation">
-        Home Valuation  {{id }}
-        city {{city}}
-      </div>
-    </div>
+    <pagination-app> </pagination-app>
 
   </div>
 
+  <ng-template #loading>
+
+    ... Loading 000000000000
+
+  </ng-template>
+
 </section>
 
-<div *ngIf="!trueResponse" class="not-found">
+<!--<ng-template  #loading>-->
+  <!--...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD...LOAD-->
+<!--</ng-template>-->
+
+<ng-template #not_found class="not-found">
 
   <h1> Drat! We can't find any properties</h1>
   <p> We will inform you as soon as we have new properties with these features </p>
 
-</div>
+</ng-template>
 
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<!--<br>-->
-<br>
-<!--<table class="table ">-->
-  <!--<thead>-->
-  <!--<tr>-->
-    <!--<th>Модель</th>-->
-    <!--<th>Цена</th>-->
-  <!--</tr>-->
-  <!--</thead>-->
-  <!--<tbody>-->
-  <!--<tr *ngFor="let item of items">-->
-    <!--<td>{{item.name}}</td>-->
-    <!--<td>{{item.price | currency}}</td>-->
-  <!--</tr>-->
-  <!--</tbody>-->
-<!--</table>-->
 
-<!--<app-counter1></app-counter1>-->
+
+<!--<div  class="flat-card" *ngFor="let item of itemsFlat, let index = index ">-->
+
+<!--<div class="flat-card-img">-->
+<!--<img class="flat-card-img-img" src="{{item.img_url}}" alt="{{item.title}}" title="{{item.title}}">-->
+<!--</div>-->
+
+<!--<div class="flat-card-description">-->
+<!--<div class="description-title">-->
+<!--<div class="description-title-title">{{item.title}}</div>-->
+<!--<div [ngClass]="{starActive: item['starActiveIndicator'] ? item['starActiveIndicator'] : false}" (click)="toggleActive(index)" class="description-star"> </div>-->
+<!--</div>-->
+
+<!--<div class="description-keywords">-->
+<!--{{item.keywords}}-->
+<!--</div>-->
+
+<!--<div class="description-descr">-->
+<!--{{item.summary}}-->
+<!--</div>-->
+
+<!--<div class="description-seen">-->
+<!--<span class="description-seen&#45;&#45;active"> {{item.updated_in_days_formatted}} </span>-->
+<!--<span> on </span>-->
+<!--<span>  {{item.datasource_name | uppercase}} </span>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<div class="flat-card-price-column">-->
+<!--<div class="price-string">-->
+<!--{{item.price_formatted}}-->
+<!--</div>-->
+
+<!--<div class="home-valuation">-->
+<!--Home Valuation  {{id }}-->
+<!--city {{city}}-->
+<!--</div>-->
+<!--</div>-->
+
+<!--</div>-->
