--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,46 +39,62 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .search-form{
-width: 99%;
+  width: 99%;
 }
 
 .search-string-input{
-height: 25px;
-width: 70%;
-margin: 10px 10px 10px 70px;
-padding-left: 15px;
-border-radius: 3px;
+  height: 25px;
+  width: 70%;
+  margin: 10px 10px 10px 70px;
+  padding-left: 15px;
+  border-radius: 3px;
 }
 
 .filters-alert .list-map{
-width: 20%;
+  width: 20%;
 }
 
 .search-string{
-width: 60%;
+  width: 60%;
 }
 
 main{
-display: flex;
+  display: flex;
 }
 
 .sidebar{
-width: 20%;
+  width: 15%;
 }
 
 .main-display{
-width: 75%;
-padding: 15px;
+  width: 70%;
+  padding: 15px;
+}
+
+.right-aside{
+  width: 10%;
 }
 
 .btnn{
   cursor: pointer;
 }
 
-/*.active {*/
-  /*color: #fff;*/
-  /*background-color: #f6bb42;*/
-/*}*/
+.sidebar-title{
+  text-align: center;
+}
+
+.fav-btn-img{
+  height: 21px;
+  width: 23px;
+  background: url('/src/assets/img/favor_hov.png');
+  background-size: cover;
+  margin: 0 auto;
+}
+
+.active {
+  color: #fff;
+  background-color: #f6bb42;
+}
 
 /*.pagination-panel{*/
   /*text-align: center;*/
