--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -3,3 +3,7 @@
   <a *ngFor="let it of pagArr" (click)="goPagination(it)" class="pagination-btn" [routerLink]="['buy', it]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> {{it}} </a>
 
 </div>
+
+
+<!--<span> . . . </span>-->
+<!--<a (click)="goPagination(200)" class="pagination-btn" [routerLink]="['buy', 200]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> {{200}} </a>-->
