--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,9 +1,11 @@
 <div class="pagination-panel">
 
-  <a *ngFor="let it of pagArr" (click)="goPagination(it)" class="pagination-btn" [routerLink]="['buy', it]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> {{it}} </a>
+  <a *ngFor="let it of pagArr" (click)="goPagination(it)" class="pagination-btn" [routerLink]="['/buy', it]" routerLinkActive="active" > {{it}} </a>
 
 </div>
 
-
+<!-- [routerLink]="['buy', it]" -->
+<!--  'buy', -->
+<!--[routerLinkActiveOptions]="{exact:true}"   -->
 <!--<span> . . . </span>-->
 <!--<a (click)="goPagination(200)" class="pagination-btn" [routerLink]="['buy', 200]" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"> {{200}} </a>-->
