--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,7 +6,7 @@
 
 .popup-window{
   width: 50%;
-  height: 300px;
+  height: 310px;
   margin: 10% auto;
   background-color: #fff;
   border-radius: 5px;
@@ -23,6 +23,19 @@
   padding: 15px;
 }
 
+.place-list{
+  text-align: left;
+}
+
+.place-list-item {
+  list-style-type: circle;
+  cursor: pointer;
+  padding-bottom: 5px;
+}
+
+.place-list-item:hover{
+  color: #0073d9;
+}
 
 .search-string-input{
   height: 25px;
@@ -35,4 +48,8 @@
 
 .search-string-input:active{
   border: solid #0073d9 1px;
+}
+
+:host{
+  background-color: #bbb586;
 }
