--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,32 @@
 <section class="home-display">
+
   <div class="popup-window">
+
     <h1 class="popup-title"> The easiest way to find UK property </h1>
-    <form class="search-form" > <!--[formGroup]="searchForm" novalidate (ngSubmit)="submit()"-->
-      <input id="radio-sale" type="radio" class="radio" name="sale_or_rent" value="sale" checked >
-      <label for="radio-sale"> for sale </label>
-      <input id="radio-rent" type="radio" class="radio" name="sale_or_rent" value="rent">
-      <label for="radio-rent"> to rent </label>
-      <br>
-      <input  class="search-string-input" type="text" placeholder="London"> <!--(change)="drawLine()"-->  <!--formControlName="searchString"-->
-      <!--<button class="btnn" (click)="addItem()" [disabled]="searchForm.invalid"> GO </button>-->
-    </form>
+
+      <div class="place-list">
+        <ul>
+          <li class="place-list-item" (click)="navQuery(item)" *ngFor="let item of placeList">{{item}}</li>
+        </ul>
+      </div>
+
   </div>
+
 </section>
+
+
+
+
+
+
+
+
+<!--<form class="search-form" [formGroup]="searchForm" novalidate (ngSubmit)="submit()" >-->
+<!--<input id="radio-sale" type="radio" class="radio" name="sale_or_rent" value="sale" checked >-->
+<!--<label for="radio-sale"> for sale </label>-->
+<!--<input id="radio-rent" type="radio" class="radio" name="sale_or_rent" value="rent">-->
+<!--<label for="radio-rent"> to rent </label>-->
+<!--<br>-->
+<!--<input formControlName="searchString" class="search-string-input" type="text" placeholder="Enter City"> &lt;!&ndash;(change)="drawLine()"&ndash;&gt;-->
+<!--<button class="btnn" (click)="addItem()" [disabled]="searchForm.invalid" [routerLink]="['buy']"> GO </button>-->
+<!--</form>-->
