--- a/src/app/spinner.css
+++ b/src/app/spinner.css
@@ -9,36 +9,36 @@
   right: 0;
   bottom: 0;
 }
-/*.loader {*/
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*left: 0;*/
-  /*right: 0;*/
-  /*bottom: 0;*/
-  /*margin: auto;*/
-  /*width: 97px;*/
-  /*height: 97px;*/
-  /*animation-name: rotateAnim;*/
-  /*-o-animation-name: rotateAnim;*/
-  /*-ms-animation-name: rotateAnim;*/
-  /*-webkit-animation-name: rotateAnim;*/
-  /*-moz-animation-name: rotateAnim;*/
-  /*animation-duration: 0.4s;*/
-  /*-o-animation-duration: 0.4s;*/
-  /*-ms-animation-duration: 0.4s;*/
-  /*-webkit-animation-duration: 0.4s;*/
-  /*-moz-animation-duration: 0.4s;*/
-  /*animation-iteration-count: infinite;*/
-  /*-o-animation-iteration-count: infinite;*/
-  /*-ms-animation-iteration-count: infinite;*/
-  /*-webkit-animation-iteration-count: infinite;*/
-  /*-moz-animation-iteration-count: infinite;*/
-  /*animation-timing-function: linear;*/
-  /*-o-animation-timing-function: linear;*/
-  /*-ms-animation-timing-function: linear;*/
-  /*-webkit-animation-timing-function: linear;*/
-  /*-moz-animation-timing-function: linear;*/
-/*}*/
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 97px;
+  height: 97px;
+  animation-name: rotateAnim;
+  -o-animation-name: rotateAnim;
+  -ms-animation-name: rotateAnim;
+  -webkit-animation-name: rotateAnim;
+  -moz-animation-name: rotateAnim;
+  animation-duration: 0.4s;
+  -o-animation-duration: 0.4s;
+  -ms-animation-duration: 0.4s;
+  -webkit-animation-duration: 0.4s;
+  -moz-animation-duration: 0.4s;
+  animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  -o-animation-timing-function: linear;
+  -ms-animation-timing-function: linear;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+}
 .loader div {
   width: 8px;
   height: 8px;
