--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   <div class="header-panel">
 
     <div class="filters-alert header-panel-elment">
-      <!--<div class="filters-bnt btn active-bnt"> Filters </div>-->
+      <div class="filters-bnt btn active-bnt"> Filters </div>
       <!--<div class="alerts-btn btn"> Alerts </div>-->
     </div>
 
@@ -38,12 +38,11 @@
 
 <main>
 
-  <aside class="sidebar">
+  <!--<aside class="sidebar">-->
 
-    <h3 class="sidebar-title"></h3>
-    <app-sidebar></app-sidebar>
+    <!--<app-sidebar></app-sidebar>-->
 
-  </aside>
+  <!--</aside>-->
 
   <section class="main-display">
 
