--- a/src/app/main-display/main-display.component.html
+++ b/src/app/main-display/main-display.component.html
@@ -29,7 +29,7 @@
 
       <pagination-app> </pagination-app>
 
-      <flat-item-app *ngFor="let item of itemsFlat, let index = index"  [item]="item" [index]="index" > </flat-item-app>
+      <flat-item-app *ngFor="let item of itemsFlat, let index = index" [starArray]="starArray" [item]="item" [index]="index" > </flat-item-app>
 
       <pagination-app> </pagination-app>
 
