--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -66,15 +66,8 @@
 
   </div>
 
-  <button class="btnn"  [disabled]="filterForm.invalid"  >   </button>
+  <button   [disabled]="filterForm.invalid"  >   </button>
 
 </form>
 
-<!--<div class="filtercontrols-row sort-by">-->
-<!--<div class="sort-by-title">Sort:</div>-->
-<!--<select name="sort-select" id="">-->
-<!--<option value="nestoria_rank" selected> Nestoria Rank </option>-->
-<!--<option value="price_h_l"> Price (high to low) </option>-->
-<!--<option value="price_l_h"> Price (low to high) </option>-->
-<!--</select>-->
-<!--</div>-->
+
