--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .home-display{
   width: 100%;
-  background: url("/src/assets/img/start_map.png");
+  background: url("/../../assets/img/start_map.png");
   padding: 1px;
 }
 
