--- a/src/app/main-display/main-display.component.css
+++ b/src/app/main-display/main-display.component.css
@@ -77,7 +77,7 @@
 .description-star{
   height: 21px;
   width: 23px;
-  background: url('/src/assets/img/favor_hov.png');
+  background: url('/../../assets/img/favor_hov.png');
   background-size: cover;
   margin-right: 20px;
   background-position: 22px 0;
